[metadata]
name = linite
version = 0.0.1
author = duhow
description = Setup packages for Debian-based systems, similar to AUR
license_files = LICENSE
url = https://github.com/duhow/linite
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Topic :: System :: Installation/Setup

[options]
python_requires = >=3.8
packages = find:
install_requires =
    pyyaml>=5
    click>=8
    voluptuous>=0.13
    semver>=2.10
    requests>=2.26

[options.entry_points]
console_scripts =
    linite = linite.cli:cli
